--- a/package.json
+++ b/package.json
@@ -3,19 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "serve": "rsbuild dev",
+    "build": "rsbuild build",
+    "preview": "rsbuild preview"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "vue": "^2.7.16"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@rsbuild/core": "^1.6.14",
+    "@rsbuild/plugin-less": "^1.5.0",
+    "@rsbuild/plugin-vue2": "^1.0.4",
     "less": "^4.0.0",
-    "less-loader": "^8.0.0",
-    "vue-template-compiler": "^2.6.14"
+    "less-loader": "^8.0.0"
+  },
+  "resolutions": {
+    "vue-loader": "^15.10.0",
+    "vue-demi": "^0.13.1"
   },
   "browserslist": [
     "> 1%",
