解决 module的问题和兼容window

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@rsbuild/plugin-node-polyfill": "^1.4.2",
     "@rsbuild/plugin-vue2": "^1.0.4",
     "@rsbuild/plugin-vue2-jsx": "^1.0.4",
+    "autoprefixer": "^10.4.23",
     "css-loader": "^7.1.2",
+    "dotenv": "^17.2.3",
     "less": "^4.0.0",
     "less-loader": "^8.1.1",
     "postcss-loader": "^8.2.0",
